feat: add info & adjust styles

--- a/index.html
+++ b/index.html
@@ -54,8 +54,10 @@
   <p>
     Click and drag <code>::</code> to rotate the slider. Release to stop the slider.
   </p>
-  <section>
-    <strong>Try other gravity:</strong>
+  <details class="w100">
+    <summary>
+      <strong>Try other gravity</strong>
+    </summary>
     <div id="gravityChoice">
       <label>
         <input type="radio" name="gravity" value="1" checked>Earth
@@ -78,7 +80,18 @@
         ☀&#xFE0F;
       </label>
     </div>
-  </section>
+  </details>
+  <footer class="w100">
+    <div>
+      Idea by <a href="https://www.facebook.com/nuruddeen.sral/videos/491164922742434"
+        target="_blank" rel="noopener nofollow noreferrer">this video</a>.
+    </div>
+    <small>
+      MIT License | <a href="https://github.com/rootEnginear/seesaw-slider"
+        target="_blank"
+        rel="noopener nofollow noreferrer">GitHub Repository</a>
+    </small>
+  </footer>
   <script src="script.js" defer></script>
 </body>
 
